# pcp-vns

./: .gitignore  .gitmodules  .travis.yml  Ansuchen_DA-ITE.doc  Doxyfile  LICENSE  Makefile  Makefile.am  README.md  Solution.cpp  StoredSolution.cpp  behemoth.sh  configure.ac  crunch.py  demo.sh  full.sh  generator.py  graph.js  index.html  main.cpp  main.go  oneStepCd.cpp  oneStepCd.hpp  outputter.py  parser.cpp  parser.hpp  pcp.bib  pcp.hpp  pcp2gv  pcp2gv.py  permute.py  pilot.cpp  poster.pub  print.xq  score.html  setup-ubigraph.sh  solution.go  travis-deps.sh  validate  vns.cpp
diplomarbeit/: TODO  abstract.tex  anhang.tex  ansatz.tex  antrag.tex  diplomarbeit.tex  eigenstaendigkeitserklaerung.tex  implementierung.tex  preamble.tex  problemstellung.tex  projektmanagement.tex  psp.xml  software.tex  titlepage.tex  valgrind.txt
doc/html/: _base_unit_8hpp_source.html  _i_o_8cpp_source.html  _i_o_8hpp_source.html  _solution_8cpp_source.html  _solution_8hpp_source.html  annotated.html  base_8cpp_source.html  change_all_8cpp_source.html  change_color_8cpp_source.html  change_node_8cpp_source.html  classes.html  classpcp_1_1_solution-members.html  classpcp_1_1_solution.html  classpcp_1_1_solution_a0dc971c8eaa6b721b03489244584c0c0_cgraph.map  classpcp_1_1_solution_a0dc971c8eaa6b721b03489244584c0c0_cgraph.md5  classpcp_1_1_solution_a0dc971c8eaa6b721b03489244584c0c0_icgraph.map  classpcp_1_1_solution_a0dc971c8eaa6b721b03489244584c0c0_icgraph.md5  classpcp_1_1_solution_a0f8b93a26882fb6ac35e8bca2c9c0c3f_icgraph.map  classpcp_1_1_solution_a0f8b93a26882fb6ac35e8bca2c9c0c3f_icgraph.md5  classpcp_1_1_solution_a37f46853da97ad5557bd3b76cb32c17c_icgraph.map  classpcp_1_1_solution_a37f46853da97ad5557bd3b76cb32c17c_icgraph.md5  classpcp_1_1_solution_a6769d1eeef0b953cb16483aa34aade1e_icgraph.map  classpcp_1_1_solution_a6769d1eeef0b953cb16483aa34aade1e_icgraph.md5  classpcp_1_1_solution_ade858cdb5c214c16aa07cc608de22546_cgraph.map  classpcp_1_1_solution_ade858cdb5c214c16aa07cc608de22546_cgraph.md5  classpcp_1_1_solution_ade858cdb5c214c16aa07cc608de22546_icgraph.map  classpcp_1_1_solution_ade858cdb5c214c16aa07cc608de22546_icgraph.md5  classpcp_1_1_solution_af3c6b0314c8ba949d188a90c2e58d18a_cgraph.map  classpcp_1_1_solution_af3c6b0314c8ba949d188a90c2e58d18a_cgraph.md5  classpcp_1_1_solution_af3c6b0314c8ba949d188a90c2e58d18a_icgraph.map  classpcp_1_1_solution_af3c6b0314c8ba949d188a90c2e58d18a_icgraph.md5  classpcp_1_1_solution_af4ed63ee7d3e63a36a0d577d170d210d_cgraph.map  classpcp_1_1_solution_af4ed63ee7d3e63a36a0d577d170d210d_cgraph.md5  classpcp_1_1_solution_af4ed63ee7d3e63a36a0d577d170d210d_icgraph.map  classpcp_1_1_solution_af4ed63ee7d3e63a36a0d577d170d210d_icgraph.md5  classpcp_1_1_v_n_s___unit-members.html  classpcp_1_1_v_n_s___unit.html  classpcp_1_1_v_n_s___unit__inherit__graph.map  classpcp_1_1_v_n_s___unit__inherit__graph.md5  classpcp_1_1_v_n_s___unit_a1a253fb444b8c4cbae498afe0aa72196_icgraph.map  (+70 more)
doc/html/search/: all_61.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6d.js  all_6f.js  all_70.js  all_73.js  all_74.js  all_76.js  classes_63.js  classes_64.js  classes_65.js  classes_73.js  classes_76.js  functions_61.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  functions_67.js  functions_6d.js  functions_72.js  functions_73.js  functions_76.js  functions_7e.js  namespaces_70.js  search.js  typedefs_61.js  typedefs_63.js  typedefs_65.js  typedefs_66.js  typedefs_67.js  typedefs_70.js  typedefs_76.js  variables_67.js  variables_68.js  (+1 more)
eucys/: eucys.tex  short.tex
header/: Solution.hpp  StoredSolution.hpp  main.hpp  pcp.hpp  vns-priv.hpp  vns.hpp
img/: translation.svg.bak
include/: IO.hpp  Solution.hpp  StoredSolution.hpp  main.hpp  oneStepCd.hpp  onestepCD.hpp  pcp.hpp  pilot.hpp  vns-priv.hpp  vns.hpp
jugendinnovativ/: jugendinnovativ.tex  jugendinnovativ.txt  jugendinnovativ_en.tex  kosten.doc
nbproject/: Package-Behemoth.bash  Package-Default.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
play/: font.css  index.html  score.html
siemens/: siemens.tex
slide/css/: reveal.css
slide/js/: piechart.js  reveal.js
slides/: index-english.html  index.html
slides/css/: cold.css  reveal.css
src/: IO.cpp  Makefile.am  Solution.cpp  StoredSolution.cpp  main.cpp  oneStepCd.cpp  onestepCD.cpp  vns.cpp
src/units/: Makefile.am  base.cpp  changeAll.cpp  changeColor.cpp  changeNode.cpp  dsatur.cpp
tests/: IOTest.cpp  IOTest.hpp  Makefile.am  SolutionTest.cpp  SolutionTest.hpp  TestSuite.cpp
tools/: crunch.py  generator.py  setup-dependencies.sh  setup-ubigraph.sh  setup.sh
units/: Makefile  base.cpp  changeAll.cpp  changeColor.cpp  changeNode.cpp  dsatur.cpp  dummy.cpp  tabuSearch.cpp
